--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="main.css">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-    
-    <header>
-      <img src="https://media.giphy.com/media/cLPfsO3eB923S/giphy.gif" alt="">
+
+    <div class="header">
+      <img src="https://media.giphy.com/media/cLPfsO3eB923S/giphy.gif" id="left-pic">
       <h1>Pokemon Index</h1>
-      <img src="https://media.giphy.com/media/cLPfsO3eB923S/giphy.gif" alt="">
-    </header>
+      <img src="https://media.giphy.com/media/cLPfsO3eB923S/giphy.gif" id="right-pic">
+    </div>
 
     <section>
       <h1>Elite Four</h1>
       <div>
         <h3>member name</h3>
         <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
-      </div>
-      <div>
+
         <h3>member name</h3>
         <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
-      </div>
-      <div>
+
         <h3>member name</h3>
         <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
-      </div>
-      <div>
+
         <h3>member name</h3>
         <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
       </div>
     </section>
 
     <aside>
-      <input type="text" name="" value="">
+      <input type="text" name="" value="pick pokemon">
+      <input type="submit" name="" value="pick pokemon">
       <div>
         <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/008.png" alt="">
         <h4>Stats</h4>
@@ -42,6 +41,8 @@
         </div>
       </div>
     </aside>
+<script type="text/javascript" src='main.js'>
 
+</script>
   </body>
 </html>
