--- a/index.html
+++ b/index.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="main.css">
     <meta charset="utf-8">
-    <title></title>
+    <title>Pokedex</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
 
     <div class="header">
-      <img src="https://media.giphy.com/media/cLPfsO3eB923S/giphy.gif" id="left-pic">
+      <img src="https://media.giphy.com/media/qSrK4HvZyLMJi/giphy.gif" id="left-pic">
       <h1>Pokemon Index</h1>
-      <img src="https://media.giphy.com/media/cLPfsO3eB923S/giphy.gif" id="right-pic">
+      <img src="https://media.giphy.com/media/qSrK4HvZyLMJi/giphy.gif" id="right-pic">
     </div>
 
     <section>
       <h1>Elite Four</h1>
-      <div>
-        <h3>member name</h3>
-        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
+      <div id="team-container">
+        <div>
+          <h3>member name</h3>
+          <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
+        </div>
 
-        <h3>member name</h3>
-        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
+        <div>
+          <h3>member name</h3>
+          <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
+        </div>
 
-        <h3>member name</h3>
-        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
+        <div>
+          <h3>member name</h3>
+          <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
+        </div>
 
-        <h3>member name</h3>
-        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
+        <div>
+          <h3>member name</h3>
+          <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
+        </div>
       </div>
     </section>
 
     <aside>
-      <input type="text" name="" value="pick pokemon">
-      <input type="submit" name="" value="pick pokemon">
-      <div>
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/008.png" alt="">
+    <form>
+      <input type="text" id="pkmn-select" placeholder="Enter pokemon number">
+    </form>
+        <div id="pkmn-img"></div>
         <h4>Stats</h4>
+        <h5>pokemon type and region</h5>
         <div class="abilities">
           <p>skill</p>
         </div>
-      </div>
     </aside>
-<script type="text/javascript" src='main.js'>
 
-</script>
+<script type="text/javascript" src='main.js'></script>
+
   </body>
 </html>
