added new sections that will be assigned on click functions. next start creating functioning JS.

--- a/index.html
+++ b/index.html
@@ -13,34 +13,81 @@
       <img src="https://media.giphy.com/media/qSrK4HvZyLMJi/giphy.gif" id="right-pic">
     </div>
 
-    <section>
+    <main>
       <h1>Elite Four</h1>
       <div id="team-container">
-        <div>
+        <span>
           <h3>member name</h3>
           <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
-        </div>
+        </span>
 
-        <div>
+        <span>
           <h3>member name</h3>
           <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
-        </div>
+        </span>
 
-        <div>
+        <span>
           <h3>member name</h3>
           <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
-        </div>
+        </span>
 
-        <div>
+        <span>
           <h3>member name</h3>
           <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
-        </div>
+        </span>
       </div>
+    </main>
+
+    <section>
+      <span>
+        <h3>member name</h3>
+        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
+      </span>
+
+      <span>
+        <h3>member name</h3>
+        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
+      </span>
+
+      <span>
+        <h3>member name</h3>
+        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
+      </span>
+
+      <span>
+        <h3>member name</h3>
+        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
+      </span>
+
     </section>
+
+    <summary>
+      <span>
+        <h3>member name</h3>
+        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
+      </span>
+
+      <span>
+        <h3>member name</h3>
+        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
+      </span>
+
+      <span>
+        <h3>member name</h3>
+        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
+      </span>
+
+      <span>
+        <h3>member name</h3>
+        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
+      </span>
+
+    </summary>
+
 
     <aside>
     <form>
-      <input type="text" id="pkmn-select" placeholder="Enter pokemon number">
+      <input type="text" id="pkmn-select" name="pkmn-select" placeholder="Enter pokemon number">
     </form>
         <div id="pkmn-img"></div>
         <h4>Stats</h4>
