fixed two divs that will be pop outs and added broken JS. Continue at YU

--- a/index.html
+++ b/index.html
@@ -39,55 +39,25 @@
     </main>
 
     <section>
-      <span>
-        <h3>member name</h3>
-        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
-      </span>
-
-      <span>
-        <h3>member name</h3>
-        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
-      </span>
-
-      <span>
-        <h3>member name</h3>
-        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
-      </span>
-
-      <span>
-        <h3>member name</h3>
-        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
-      </span>
-
+      <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/006.png" alt="">
+      <p>about the pokemon like its origin or like where you can catch it or like when you caught it</p>
+      <div id="move-list">
+        <p>Heat Wave</p>
+        <p>Magma Zone</p>
+        <p>Sunny Day</p>
+        <p>Roost</p>
+      </div>
     </section>
 
     <summary>
-      <span>
-        <h3>member name</h3>
-        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
-      </span>
-
-      <span>
-        <h3>member name</h3>
-        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
-      </span>
-
-      <span>
-        <h3>member name</h3>
-        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
-      </span>
-
-      <span>
-        <h3>member name</h3>
-        <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
-      </span>
-
+      <p>heatwave is a fire type move and does 80 fire dmg it is a magical attack and it cost 5pp</p>
     </summary>
 
 
     <aside>
     <form>
       <input type="text" id="pkmn-select" name="pkmn-select" placeholder="Enter pokemon number">
+      <input type="submit" name="" value="">
     </form>
         <div id="pkmn-img"></div>
         <h4>Stats</h4>
