added JS API for all 807 pokemon to display(want to be able to search must continue). added events for clicking of team members(clicking the ability in move list still broken). next step start on following the requirements for the project concerning objects.

--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
       <img src="https://media.giphy.com/media/qSrK4HvZyLMJi/giphy.gif" id="right-pic">
     </div>
 
-    <main>
-      <h1>Elite Four</h1>
+    <main id="main">
+      <h1>Your Teams</h1>
       <div id="team-container">
-        <span>
+        <span class="team-member">
           <h3>member name</h3>
           <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
         </span>
 
-        <span>
+        <span class="team-member">
           <h3>member name</h3>
           <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
         </span>
 
-        <span>
+        <span class="team-member">
           <h3>member name</h3>
           <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
         </span>
 
-        <span>
+        <span class="team-member">
           <h3>member name</h3>
           <img src="https://forums.bulbagarden.net/data/avatars/o/109/109363.jpg?1559949552" alt="">
         </span>
       </div>
     </main>
 
-    <section>
+    <section id="section">
       <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/006.png" alt="">
       <p>about the pokemon like its origin or like where you can catch it or like when you caught it</p>
       <div id="move-list">
@@ -49,22 +49,16 @@
       </div>
     </section>
 
-    <summary>
+    <summary id="summary">
       <p>heatwave is a fire type move and does 80 fire dmg it is a magical attack and it cost 5pp</p>
     </summary>
 
 
-    <aside>
+    <aside class="pkmn-search">
     <form>
-      <input type="text" id="pkmn-select" name="pkmn-select" placeholder="Enter pokemon number">
-      <input type="submit" name="" value="">
+      <input type="text" id="pkmn-select" placeholder="Enter pokemon number">
     </form>
-        <div id="pkmn-img"></div>
-        <h4>Stats</h4>
-        <h5>pokemon type and region</h5>
-        <div class="abilities">
-          <p>skill</p>
-        </div>
+    <ol id="pkmn-list"></ol>
     </aside>
 
 <script type="text/javascript" src='main.js'></script>
