website is working well for the most part. next task is customising team for each trainer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
+    <div class="collapse-container">
+        <input id="collapsible" class="toggle" type="checkbox">
+        <label for="collapsible" class="lbl-toggle"><img src="http://www.pokestadium.com/assets/img/tools/trainercard/trainers/male/44.png"></label>
+        <div class="collapsible-content">
+          <div class="content-inner">
+            <p>This type of paper is stronger and more durable than the average sheet of paper. Instead of being made from low grade wood pulp, it is mostly made up of rag pulp.</p>
+          </div>
+        </div>
+        </div>
 
     <div class="header">
       <img src="https://media.giphy.com/media/qSrK4HvZyLMJi/giphy.gif" id="left-pic">
@@ -20,7 +29,7 @@
     </main>
 
     <section id="section">
-      <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/006.png" alt="">
+      <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/039.png" alt="">
       <p>about the pokemon like its origin or like where you can catch it or like when you caught it</p>
       <div id="move-list">
         <p>Heat Wave</p>
