--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title>Pokedex</title>
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <div class="collapse-container">
+    <!-- <div class="collapse-container">
         <input id="collapsible" class="toggle" type="checkbox">
         <label for="collapsible" class="lbl-toggle"><img src="http://www.pokestadium.com/assets/img/tools/trainercard/trainers/male/44.png"></label>
         <div class="collapsible-content">
@@ -14,7 +15,7 @@
             <p>This type of paper is stronger and more durable than the average sheet of paper. Instead of being made from low grade wood pulp, it is mostly made up of rag pulp.</p>
           </div>
         </div>
-        </div>
+        </div> -->
 
     <div class="header">
       <img src="https://media.giphy.com/media/qSrK4HvZyLMJi/giphy.gif" id="left-pic">
@@ -22,21 +23,14 @@
       <img src="https://media.giphy.com/media/qSrK4HvZyLMJi/giphy.gif" id="right-pic">
     </div>
 
-    <main>
-      <h1>Your Teams</h1>
-      <button type="button" id="team-btn">add member</button>
-      <div id="team-container"></div>
+    <main id="team-container">
+      <img src="https://cdn1.iconfinder.com/data/icons/outline-6/96/circle-add-512.png" id='team-btn'>
+      <h1 id="poke-btn">View Team</h1>
     </main>
 
-    <section id="section">
-      <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/039.png" alt="">
-      <p>about the pokemon like its origin or like where you can catch it or like when you caught it</p>
-      <div id="move-list">
-        <p>Heat Wave</p>
-        <p>Magma Zone</p>
-        <p>Sunny Day</p>
-        <p>Roost</p>
-      </div>
+    <section id="poke-team">
+      <img src="http://www.iconarchive.com/download/i91602/icons8/windows-8/Science-Plus2-Math.ico" alt="" id='add-pkmn'>
+      <img src="http://www.iconarchive.com/download/i91592/icons8/windows-8/Science-Minus2-Math.ico" alt="" id='remove-pkmn'>
     </section>
 
     <summary id="move-sum">
